# Destributed-Task-Scheduler

./: .clippy.toml  .gitignore  :w  Cargo.toml  Dockerfile.sm  README.md  docker-compose.yaml  how-create-binary-in-rust.md  migrate.sh  package.json  pnpm-lock.yaml  some-helpful-commands.md
.github/hooks/: pre-commit
.github/workflow/: publish_pub_api.yaml
.github/workflows/: health_check_remover.yaml  woker_init.yaml  (+9 more)
.sqlx/: query-09f4126b574adced5b9a25b63af4cbbc712fb92317db1ff99c07a895f004fee1.json  query-24115fcd577311d0bd3f80aa0ba14e4f39500dd55b48cffc4301f565ee70f120.json  query-315521a49a4bf34291bd825c12573461bab38e327e8efc952b04d19e30014a9b.json  query-31967d8bc69c511128798c21e041b29bb75c986bc0a9d8a8ece5c605a1425f5d.json  query-3c2ce686882fe53871f5c50221d79ec5ecb651041c5e522b1322d16253fdf3e1.json  query-427e79c6e39538314282eb66eb7426e530ca4ba641b0834beeec928b9260f48f.json  query-4690c7c18d052055507c0476148182415d9fb27d9d6e677401172893b1e05913.json  query-46ed162d2b73987ad03ddebec5400276f86fb6bc2fc9b3471b11658773081a76.json  query-47f7d2cc3c47f818a19f6b4562cc9eaa516f8703caebd41e370d7f88f678595d.json  query-534c7695e39829a819dc4202a6e8d2e5130775500e24e9eb3d37b6319bb1208a.json  query-576689a620a325b477ea6f1b67bbc58009618d79373883b0a952b0c17f5bc7cf.json  query-591128d5025bb5fd423a1df2a235766920bdca1c650df4c482470ec55579044e.json  query-6b65af24d633551efbb8081a95b46ea5e394c2a4c061773738ec0c0f6cb10253.json  query-6dff1b8896f396f00f65d50533c613936f631ed28f69a8f5cc0a146621bd4a22.json  query-71fd9073ce2bccf042a36bae46f4d5eaaea0d301a4500392c1df0902cbde2b0a.json  query-7a2ab22795d5af6f3d97f69bf5d1c468608177167dc8e8ecae9a61116543234d.json  query-7c977b5f3bf3a3b37ca425db01d84fe55f307693e550e3e91aefe5cf08e74f73.json  query-8fbdd05914ab9266bfe5536315f25170a2292a2c4b0ef882d6ea7b2837ee0035.json  query-962610002ca8baab7b5d5e3e722dba23d4822aff9c9c3e528985631027b19c55.json  query-a2b1223f48db99deba7fd1180b8175f38f47bb07184cd967b66de8b7119c0acc.json  query-a791679f3ba4d819e2bdbd3cc04eafc694465d6cf851c71b8e4e6c37689e2088.json  query-aaf164e39fb4516e5fed0eb51c4d51473c53fc848f77c897ba8f30c2354e74e6.json  query-aea8bd2fbde3117fe3a0f8e74bfdeaec67b0c35b308be22a00df785cd2b121c4.json  query-b5561dbf294c127c77eeb0119ac5a3617486d5212e78acca399cb9bf252a2aa2.json  query-e6d4da94bef591378adcb67b169bd2d5882cc33c0367092e04fe6c9e18ee170f.json  query-fcc5fd4896c078e794a52aedcf5d1dce57d785a49e780604bbacb3abb6be3a4a.json  query-ff03bffbc65c78ecd884943abc585ce0f137db18d75ae2ac284ae0b46e9683d5.json
common/: Cargo.toml  env.yaml
common/src/: database.rs  jwt.rs  kafka_producer.rs  lib.rs  s3.rs  sqs.rs
crates/common/: Cargo.toml
crates/common/src/: database.rs  jwt.rs  tracing.rs
health_check_entries_remover/: Cargo.toml  Dockerfile
health_check_remover/: Cargo.toml  Dockerfile
health_check_remover/src/: main.rs
health_check_remover/tests/: remove_stale_health_check_entry.rs
health_check_remover/tests/common/: helper.rs
infra/: .env  Chart.yaml  README.md  init_container.yaml  migration.yaml  pub_api_values.yaml  secrets.example.yaml  values.yaml
migrations/: 20240716133613_tasks.sql
pub-api/: .env  :w  Cargo.toml  \  curl.md  env.yaml  migrate.sh
pub-api/migrations/: 20240716133613_tasks.sql
pub-api/src/: configuration.rs  lib.rs  main.rs  state.rs
pub-api/src/routes/: task.rs  tasks.rs
pub-api/src/utils/: database.rs
pub-api/tests/api/: check_status.rs  create_task.rs  health_check.rs  main.rs  test_helper.rs
pub_api/: .env  Cargo.toml  Dockerfile  Dockerfile.not_caching  curl.md  env.yml  todo.md
pub_api/migrations/: 20240716133613_tasks.sql
pub_api/src/: configuration.rs  lib.rs  main.rs  startup.rs  state.rs  tracing.rs
pub_api/src/routes/: check_status.rs  create_sign_url.rs  create_task.rs  mod.rs  task_status.rs  tasks.rs
pub_api/tests/api/: check_status.rs  create_sign_url.rs  create_task.rs  health_check.rs  main.rs  test_helper.rs  upload_status.rs
pub_api/tests/system_testing/: main.rs  s3_presigned_url.rs
remove_health_check_entry/: Cargo.toml
retry_and_failed_updater_service/: Cargo.toml  Dockerfile
retry_and_failed_updater_service/src/: configuration.rs  lib.rs  main.rs  process.rs
retry_and_failed_updater_service/tests/service/: helper.rs  main.rs  retry_and_failed_updater.rs
retry_and_failed_updator_service/: Cargo.toml
scripts/: migrate_health_checks.sh  migrate_prod.sh  migrate_tasks.sh  sync_file_to_remote.sh
services/health_check_remover/: .env  Cargo.toml  Dockerfile
services/health_check_remover/src/: configuration.rs  main.rs  process.rs
services/health_check_remover/tests/common/: helper.rs
services/retry_and_failed_updater/: Cargo.toml  Dockerfile
services/retry_and_failed_updater/src/: configuration.rs  lib.rs  main.rs  process.rs
services/retry_and_failed_updater/tests/service/: helper.rs  retry_and_failed_updater.rs
services/status_check/: Cargo.toml  Dockerfile
services/status_check/src/: error.rs  lib.rs  main.rs
services/status_check/src/routes/: heart_beat.rs  update_status.rs
services/status_check/tests/api/: health_check.rs  test_helpers.rs  update_worker_status.rs  worker_heart_beats.rs
services/worker/init/: Cargo.toml  Dockerfile
services/worker/init/src/: configuration.rs  kube.rs  lib.rs  main.rs
services/worker_spinner/: Cargo.toml  Dockerfile
services/worker_spinner/src/: kube.rs  main.rs
status_check_service/: Cargo.toml  Dockerfile  dockerfile
status_check_service/src/: configurations.rs  lib.rs  main.rs  startup.rs
status_check_service/src/middleware/: auth.rs
status_check_service/src/routes/: heart_beat.rs  mod.rs  update_status.rs
status_check_service/tests/api/: main.rs  test_helpers.rs  update_worker_status.rs  worker_heart_beats.rs
task_producer/: .gitignore  Cargo.toml  env.yaml
tasks_producer/: Cargo.toml  Dockerfile
tasks_producer/src/: configuration.rs  lib.rs  main.rs  producer.rs
tasks_producer/tests/: producer.rs
tasks_producer/tests/helper/: helper.rs
web/: index.html  package.json  pnpm-lock.yaml
worker/init/: Cargo.toml
worker/init/src/: main.rs
(+84 files in other folders)
