[workspace]
resolver="2"
members = [ 
    "common", "db/health_checks", "db/tasks",
    "pub_api", "health_check_remover", "retry_and_failed_updater_service", "status_check_service", 
    "tasks_producer", "worker/main",
]
[workspace.dependencies]
serde = "1.0.204"
serde-aux = "4.5.0"
serde_json = "1.0.120"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.14.0"
aws-config = "1.5.4"
aws-sdk-s3 = "1.42.0"
tokio = { version = "1", features = ["full"] }
aws-sdk-sqs = "1.36.0"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["json"] }
thiserror = "1.0.62"
openssl = { version = "0.10", features = ["vendored"] }
