[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde ={workspace=true} 
serde-aux = {workspace=true}
sqlx = {workspace=true}
config = {workspace=true}
aws-config ={workspace=true} 
aws-sdk-s3={workspace=true}
aws-sdk-sqs.workspace = true
jsonwebtoken = "9.3.0"
chrono.workspace = true

