[package]
name = "health_check_remover"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = {workspace=true}
config = {workspace=true}
tokio ={workspace=true}
uuid = { workspace=true}
common={ path = "../common" }
health_checks = { version = "0.1.0", path = "../db/health_checks" }
once_cell ={workspace=true}
