[package]
name = "pub_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace=true}
chrono = {workspace=true}
once_cell ={workspace=true}
reqwest = {workspace=true}
serde ={workspace=true} 
serde_json = {workspace=true}
sqlx = {workspace=true}
config = {workspace=true}
thiserror = {workspace=true}
tokio ={workspace=true}
tower-http =  {workspace=true}
tracing = {workspace=true}
uuid = { workspace=true}
common={ path = "../common" }
aws-sdk-s3={workspace=true}
axum.workspace = true
tasks = { version = "0.1.0", path = "../db/tasks" }
