[package]
name = "retry_and_failed_updater_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace=true}
chrono = {workspace=true}
once_cell ={workspace=true}
reqwest = {workspace=true}
serde ={workspace=true} 
serde-aux = {workspace=true}
serde_json = {workspace=true}
sqlx = {workspace=true}
config = {workspace=true}
thiserror = {workspace=true}
tokio ={workspace=true}
tracing = {workspace=true}
tracing-bunyan-formatter =  {workspace=true}
tracing-subscriber ={workspace=true}
uuid = { workspace=true}
common={path="../common"}
aws-config ={workspace=true} 
openssl = {workspace=true} 
tasks = { version = "0.1.0", path = "../db/tasks" }
health_checks = { version = "0.1.0", path = "../db/health_checks" }
