[package]
name = "retry_and_failed_updater_service"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell ={workspace=true}
serde ={workspace=true} 
sqlx = {workspace=true}
config = {workspace=true}
tokio ={workspace=true}
tracing = {workspace=true}
tracing-bunyan-formatter =  {workspace=true}
tracing-subscriber ={workspace=true}
uuid = { workspace=true}
common={path="../common"}
tasks = { version = "0.1.0", path = "../db/tasks" }
health_checks = { version = "0.1.0", path = "../db/health_checks" }
