[package]
name = "status_check_service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace=true}
chrono = {workspace=true}
once_cell ={workspace=true}
reqwest = {workspace=true}
serde ={workspace=true} 
serde-aux = {workspace=true}
serde_json = {workspace=true}
sqlx = {workspace=true}
config = {workspace=true}
thiserror = "1.0.62"
tokio ={workspace=true}
tower-http =  {workspace=true}
tracing = {workspace=true}
tracing-bunyan-formatter =  {workspace=true}
tracing-subscriber ={workspace=true}
uuid = { workspace=true}
common={path="../common"}
tasks={path="../db/tasks"}
health_checks={path="../db/health_checks"}
axum.workspace = true
