[package]
name = "task_producer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { version = "0.1.0", path = "../common" }
sqlx.workspace = true
tokio = { version = "1.38.1", features = ["full"] }
config.workspace = true
serde.workspace = true
aws-sdk-sqs.workspace = true
uuid = { workspace = true, features = ["v4"] }
tasks = { version = "0.1.0", path = "../db/tasks" }
once_cell.workspace=true
tracing = {workspace=true}
serde_json.workspace = true

