[package]
name = "worker_spinner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde ={workspace=true} 
config = {workspace=true}
tokio ={workspace=true}
tracing = {workspace=true}
aws-sdk-s3.workspace = true
common={path="../../crates/common"}
tasks={path="../../crates/db/tasks"}
health_checks={path="../../crates/db/health_checks"}
aws-sdk-sqs = { workspace=true}
serde_json.workspace = true
kube = "0.93.1"
k8s-openapi = { version = "0.22.0", features = ["v1_30"] }
uuid.workspace = true
anyhow.workspace = true
