[package]
name = "init"
version = "0.1.0"
edition = "2021"

[dependencies]
serde ={workspace=true} 
config = {workspace=true}
tokio ={workspace=true}
tracing = {workspace=true}
aws-sdk-s3={ workspace=true}
common = { version = "0.1.0", path = "../../../crates/common" }
tasks = { version = "0.1.0", path = "../../../crates/db/tasks" }
aws-sdk-sqs = { workspace=true}
serde_json.workspace = true
